examples/test/testpolicy18912.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18912
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key32: value49
      key24: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value16
      podSelector:
        matchLabels:
          key27: value23
          key31: value14
